[package]
name = "pycc-tx"
version = "0.1.0"
authors = ["ssadler <developers@komodoplatform.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pycctx"
crate-type = ["dylib"]

[dependencies.pyo3]
version = "0.9.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
chain = { git = "https://github.com/ssadler/parity-bitcoin.git" }
keys = { git = "https://github.com/ssadler/parity-bitcoin.git" }
primitives = { git = "https://github.com/ssadler/parity-bitcoin.git" }
script = { git = "https://github.com/ssadler/parity-bitcoin.git" }
serialization = { git = "https://github.com/ssadler/parity-bitcoin.git" }
bitcrypto = { git = "https://github.com/ssadler/parity-bitcoin.git" }
cryptoconditions = { path = "./cryptoconditions" }
libsecp256k1 = "0.2.2"
rustc-hex = "2"
