[package]
name = "cryptoconditions-rs"
version = "0.1.0"
authors = ["Scott Sadler <me@scottsadler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pycctx"       
crate-type = ["dylib"]

[dependencies]
asn1 = { git = "https://github.com/alex/rust-asn1" }
libsecp256k1 = "0.2.2"
rustc-hex = "2"
simple_asn1 = { git = "https://github.com/acw/simple_asn1" }
num-bigint = "0.2.6"
num-traits = "0.2"
sha2 = "0.8.0"

